# webshop-order-scraper

./: .gitignore  ATTRIBUTION.md  LICENSE  NOTES.md  README.md  bootstrap.py  dev.env  example.env  http  https  json_to_csv.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  runserver_loop  schema.json  scraper.py  settings-example.json  shopstats.py  sudo-fix-db.py  sudo-nuke-db.py  update.py  webshop-order-scraper.code-workspace.example
bookmarklets/: digikey.js  tindie.com.js  tindie.com.txt
hlo/: asgi.py  settings.py  urls.py  wsgi.py
hlo/settings/: __init__.py  django.py  order_scraper.py
order_scraper/: admin.py  apps.py  models.py  urls.py  views.py  views_classbased.py
order_scraper/jinja2/order_scraper/: order_list.html
order_scraper/management/commands/: scrape.py
order_scraper/management/commands/scrapers/: __init__.py  adafruit.py  ali.py  aliexpress.py  amazon.py  amazon_co_jp.py  amazon_co_uk.py  amazon_com.py  amazon_de.py  amazonde.py  base.py  distrelec.py  ebay.py  imap.py  mail.py  pimoroni.py  tryout.py
order_scraper/migrations/: 0001_initial.py  0002_order_unique_shop_branch_order_id.py  0003_auto_20230412_2301.py  0004_alter_orderitem_thumbnail.py  0005_alter_orderitem_order.py
order_scraper/models/: __init__.py  attachement.py  order.py  orderitem.py  shop.py
order_scraper/templates/order_scraper/: order_list.html
output/: schema.json
schema/: webshop-orders-2-0-0.json  webshop-orders-3-0-0.json  webshop-orders.json
scrapers/: __init__.py  adafruit.py  aliexpress.py  amazon.py  base.py  digikey.py  distrelec.py  ebay.py  ebay_old.py  imap.py  jula.py  kjell.py  komplett.py  pimoroni.py  polyalkemi.py  tindie.py  tryout.py  utils.py
scrapers/settings/: __init__.py  log_formatter.py  settings.py
templates/: base.html
