[project]
name = "homelab-organizer"
version = "0.2023.2"
description = "Web app for organizing stuff in your homelab"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Environment :: Web Environment",
  "Environment :: Console",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Framework :: Django :: 3.2"
]

[project.urls]
repository = "https://github.com/Kagee/homelab-organizer.git"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "hlo.settings"

# https://www.codeac.io/documentation/pylint-configuration.html
[tool.pylint.'MAIN']
extension-pkg-allow-list = [
  "lxml",
]

[tool.pyright]
# This makes pyright not mark code behind thinks like
# os.name != "nt" as unreacable.
pythonPlatform = ""

[tool.pylint.'MESSAGES CONTROL']
# Please do not use this as an
# indicator as to my feeling
# towards documentation...
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
]

[tool.black]
line-length = 80
target-version = ['py39']
experimental-string-processing = true