[project]
name = "webshop-scraper"
version = "0.2023.1"
description = "Command line tool for scraping orders from multiple web shops"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
repository = "https://github.com/Kagee/webshop-scraper.git"

[tool.pylint.'MAIN']
extension-pkg-allow-list = [
  "lxml",
]

[tool.pyright]
# This makes pyright not mark code behind
# things like os.name != "nt" as unreacable.
pythonPlatform = ""

[tool.pylint.'MESSAGES CONTROL']
# Please do not use this as an
# indicator as to my feeling
# towards documentation...
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
]

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX", "TODO", "NOTE"]

[tool.black]
line-length = 80
target-version = ['py39']
experimental-string-processing = true
preview = true
