[project]
name = "webshop-scraper"
version = "0.2023.1"
description = "Command line tool for scraping orders from multiple web shops"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
repository = "https://github.com/Kagee/webshop-scraper.git"

[tool.pylint.'MAIN']
extension-pkg-allow-list = [
  "lxml",
]

[tool.pyright]
# This makes pyright not mark code behind
# things like os.name != "nt" as unreacable.
pythonPlatform = ""

[tool.pylint.'MESSAGES CONTROL']
# Please do not use this as an
# indicator as to my feeling
# towards documentation...
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
]

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX", "TODO", "NOTE"]

[tool.black]
line-length = 80
target-version = ['py310']
experimental-string-processing = true
preview = true

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py310"
#select = ["E4", "E7", "E9", "F"]
#select = ["E", "F", "W", "I", "B"]
select = ["ALL"]
ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D106", # Missing docstring in public nested class
  "D107", # Missing docstring in `__init__`
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "ANN", # Annotations
  "D", # docstrings?
  ]
fixable = ["ALL"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]